Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjTextField.quorum
class Main
    text v = "text"
    action Main
        Test(v)
    end

    action Test(Text var)
    end
end
